--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,7 @@
   <script src="https://kit.fontawesome.com/4372dc444b.js" crossorigin="anonymous"></script>
 
   <meta charset="utf-8">
-  <title>StudyMashProperties</title>
+  <title>StudyMashHSPA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
